testdata/e2e/examples/template/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: template
spec:
  template: true
  steps:
  - try:
    - apply:
        resource:
          apiVersion: v1
          kind: ConfigMap
          metadata:
            name: ($namespace)
    - assert:
        resource:
          apiVersion: v1
          kind: ConfigMap
          metadata:
            name: ($namespace)
    - delete:
        ref:
          apiVersion: v1
          kind: ConfigMap
          name: ($namespace)
